--- a/src/tailwind.output.css
+++ b/src/tailwind.output.css
@@ -659,6 +659,10 @@ video {
   resize: none;
   width: 75%;
   grid-row: span 2 / span 2;
+  transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+  transition-duration: 300ms;
 }
 
 .space-y-0 > :not([hidden]) ~ :not([hidden]) {
